# webui

./: .clang-format  .gitignore  .gitpod.yml  CMakeLists.txt  LICENSE  README.md  build  webui.code-workspace
.theia/: settings.json
cmake/: FindNpm.cmake
cmd/: CMakeLists.txt
cmd/webui/: main.cc
pkg/: CMakeLists.txt
pkg/machine/: machine.cc  machine.h  machine_api.cc  machine_api.h  test-machine.cc
pkg/rest/: rest_server.cc  rest_server.h  web_socket.cc  web_socket.h
pkg/web/: file_handler.cc  file_handler.h  frontend.cc  frontend.h
ui/: CMakeLists.txt  package-lock.json  package.json
ui/src/: App.js  config.js  index.css
ui/src/components/: machine.js
vm/: README.md  Vagrantfile  vscode-cpp.yml
vm/files/xfce4/panel/launcher-19/: 15914490126.desktop
vm/files/xfce4/panel/launcher-20/: 15914490257.desktop
vm/files/xfce4/xfconf/xfce-perchannel-xml/: xfce4-panel.xml
